[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://src/Enemies/EnemyBossSlime.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BossSlime" parent="." instance=ExtResource( 2 )]

[node name="Position1" type="Position2D" parent="."]

[node name="Position2" type="Position2D" parent="."]

[node name="Position3" type="Position2D" parent="."]

[node name="Position4" type="Position2D" parent="."]

[node name="Position5" type="Position2D" parent="."]

[node name="Position6" type="Position2D" parent="."]
[connection signal="boss_dead" from="BossSlime" to="." method="on_boss_dead"]
